--- a/index.html
+++ b/index.html
@@ -78,13 +78,13 @@
       <div class="row">
         <div class="col-lg-10 mx-auto">
           <h1 class="text-uppercase">
-            <strong>[Aura Sukma Aulia]</strong>
+            <strong>[Your Full Name]</strong>
           </h1>
           <hr class="divider my-4" />
         </div>
         <div class="col-lg-8 mx-auto">
           <p class="text-faded text-black mb-5">[A brief introduction about me]</p>
-          <p class="text-italic font-weight-bold mb-5">[Student/UIUX, Quote, etc.]</a></p>
+          <p class="text-italic font-weight-bold mb-5">[Current Job/Speciality, Quote, etc.]</a></p>
           <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More!</a>
         </div>
       </div>
@@ -189,7 +189,7 @@
         <div class="col-lg-12 text-center">
           <h2 class="section-heading" id="githubb">
             <a class="text-white-link" href="#">
-						  [https://github.com/AuraSA24/AuraSA24]
+						  [Link to GitHub Repository]
               <i class="fa fa-1x fa-github-square" style="color:white"></i>
             </a>
           </h2>
@@ -207,8 +207,8 @@
             <img class="img-responsive" width="100%" height="auto" src="img/portfolio/thumbnails/project (1).jpg" alt="">
             <div class="portfolio-box-caption">
               <div class="portfolio-box-caption-content">
-                <div class="project-category text-faded">[Repository 1 = Twoeius(1)]</div>
-                <div class="project-name">[Graf]</div>
+                <div class="project-category text-faded">[Repository 1]</div>
+                <div class="project-name">[repository description]</div>
               </div>
             </div>
           </a>
