--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <div class="container">
 
       <!-- Updated with latest Creative -->
-      <a class="navbar-brand js-scroll-trigger" href="#page-top">[Assignment WWTIK GAB 01 2022/2023]</a>
+      <a class="navbar-brand js-scroll-trigger" href="#page-top">[Your Site Name Here]</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" 
               data-toggle="collapse" data-target="#navbarResponsive" 
               aria-controls="navbarResponsive" aria-expanded="false" 
@@ -84,7 +84,7 @@
         </div>
         <div class="col-lg-8 mx-auto">
           <p class="text-faded text-black mb-5">[A brief introduction about me]</p>
-          <p class="text-italic font-weight-bold mb-5">[Student/UIUX, Do or Die, etc.]</a></p>
+          <p class="text-italic font-weight-bold mb-5">[Student/UIUX, Quote, etc.]</a></p>
           <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More!</a>
         </div>
       </div>
@@ -111,7 +111,7 @@
         <div class="col-lg-3 col-md-6 col-sm-6 text-center div-padding-fix mb-4">
           <i class="fa fa-4x fa-graduation-cap text-faded sr-icons"></i>
           <h3 class="text-white">Graduation</h3>
-          <p class="text-faded">Graduated in [Unknown - Hopefully in 2025] [with Summa Cum Laude]</p>
+          <p class="text-faded">Graduated in [Month Year] [with Summa Cum Laude]</p>
         </div>
 
         <div class="col-lg-3 col-md-6 col-sm-6 text-center mb-4">
@@ -124,7 +124,7 @@
         <div class="col-lg-3 col-md-6 col-sm-6 text-center mb-4">
           <i class="fa fa-4x fa-file-code-o text-faded sr-icons"></i>
           <h3 class="text-white">Skills</h3>
-					<p class="text-faded">[Special Skills ex: UI/UX Designer]</p>
+					<p class="text-faded">[Special Skills ex: Full Stack Developer]</p>
           <p class="text-faded no-margin">[C# .NET Back end]</p>
           <p class="text-faded">[HTML5 Front end]</p>
         </div>
@@ -207,8 +207,8 @@
             <img class="img-responsive" width="100%" height="auto" src="img/portfolio/thumbnails/project (1).jpg" alt="">
             <div class="portfolio-box-caption">
               <div class="portfolio-box-caption-content">
-                <div class="project-category text-faded">[Repository 1 = Tworius(1)]</div>
-                <div class="project-name">[Graf (C++) for assignment also]</div>
+                <div class="project-category text-faded">[Repository 1 = Twoeius(1)]</div>
+                <div class="project-name">[Graf]</div>
               </div>
             </div>
           </a>
